add to gitignore, update script files for quarto use

--- a/quarto_reports/report_influenzatiters.qmd
+++ b/quarto_reports/report_influenzatiters.qmd
@@ -1,6 +1,6 @@
 ---
-title: "Influenza Antibody Analysis"
-author: "Your Name"
+title: "Influenza Antibody Analysis Report"
+author: "Lukas Baumann, 14.04.2025"
 format:
   html:
     toc: true
@@ -8,55 +8,34 @@ format:
     number-sections: true
     code-fold: true
     code-summary: "Show Code"
+    warning: false
 editor: visual
 ---
 
-# 1. Load Libraries & Data
+# HAI Analysis
 
 ```{r}
-library(dplyr)
-library(tidyr)
-library(haven)
-library(here)
-library(lubridate)
-library(openxlsx)
-library(ggplot2)
-library(stringr)
-library(readr)
-library(scales)
-library(patchwork)
-library(ggpubr)
-library(car)
-
-microneut_analysis_raw  <- read.xlsx(here::here("processed", "microneut_analysis_raw.xlsx"))
-hai_analysis_raw  <- read.xlsx(here::here("processed", "hai_analysis_raw.xlsx"))
-influenza_antibody_results <- read.xlsx(here::here("processed", "influenza_antibody_results.xlsx"))
-basefile_withPID <- read.xlsx(here::here("processed", "FluVac_basefile_withPID.xlsx"))
+#| include: false
+source(here::here("scripts", "02_hai_microneut_basic_analysis.R"))
 ```
 
-# 2. HAI Analysis
-
 ```{r}
-hai_analysis_raw_p <- hai_analysis_raw %>%
-  select(pat_group, Sampling_number, H1N1, H3N2, BVic, BYam, PID) %>%
-  pivot_longer(cols = 3:6, names_to = "strain", values_to = "result")
-
 plot_hai_comb_group_wide
 ```
 
-# 3. Microneutralisation Titers
+# Microneutralisation Titers
 
 ```{r}
-microneut_analysis_raw_p <- microneut_analysis_raw %>%
-  select(pat_group, Sampling_number, H1 = FluA_H1_ic50, H3 = FluA_H3_ic50, Vic = FluA_Vic_ic50, PID) %>%
-  pivot_longer(cols = 3:5, names_to = "strain", values_to = "ic50")
-
 plot_ic50_comb_group_wide
 
 plot_ic50_comb_strain_wide
 ```
 
-# 4. Correlation of Baseline Titers with Fold-Changes
+# Correlation of Baseline Titers with Fold-Changes
+
+```{r}
+source(here::here("scripts", "03_baseline_titers_assessment.R"))
+```
 
 ```{r}
 linreg_plot_comb
@@ -66,18 +45,19 @@ linreg_plot_comb2
 corb_comb_all
 ```
 
-# 4b. Linear Regression Models & Residual Diagnostics
+# Linear Regression Models & Residual Diagnostics
 
 ```{r}
 linreg_plot_test_combined
 ```
 
-# 5. Correlation of HAI and Microneutralisation Assays
+# Correlation of HAI and Microneutralisation Assays
 
 ```{r}
-influenza_antibody_harmonised
-influenza_antibody_ranked
+source(here::here("scripts", "04_hai_vs_microneut.R"))
+```
 
+```{r}
 ggplot(data=df3, aes(x=hai_rank, y=ic50_rank)) +
   geom_point(size = 2, alpha = 0.5) +
   geom_smooth(method = "lm", se = TRUE) +
